2008-01-10  Matti Aarnio - OH2MQK - KP20NG  <mea@mea.h.zmailer.org>

	* aprx.c:
	    Always close STDIN from reading, and replace it with
	    a file handle opened on /dev/null.
	    When daemoning, close also STDOUT and STDERR, and
	    replace them with handles writing to /dev/null.

	* aprx.h, aprx.c, config.c, erlang.c, aprx.8.in, aprx.conf.in,
	  aprx-stat.c:
	    Add (and document) option for logging erlang data on separate
	    file without any runtime options or need to divert stdout
	    or syslog anywhere.

2008-01-08  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.h, ttyreader.c, erlang.c, netax25.c, aprx-stat.c:
	    When talking with multi-drop KISS, account each TNC
	    separately.

2008-01-07  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* version 0.15

	* erlang.c:
	    Do not double-open the state backingstore file

	* aprsis.c:
	    Remember to close the opened log files.

	* ttyreader.c:
	    Support case of _no_ serialports (reading only via AX.25 net)

	* Makefile, logrotate.aprx.in:
	    Put aprx logs on /var/log/aprx/,  and have monthly rotate.

	* debian/*, Makefile:
	    Debian package building infrastructure

	* aprx.8.in, aprx.conf.in:
	    A bit elaboration on how to add multiple entries of
	    aprsis-server, and  serialport  definitions.

	* aprsis.c, ttyreader.c, aprx.8.in, aprx.conf.in:
	    Remove last vestiges of program having any hardwired limits
	    on number of anything.  There are (of course) lots of
	    parameters that are singletons, but all multiples are
	    now unlimited (within memory limits..)

	* Makefile:
	    "make install"  does install the  CFGFILE (aprx.conf)
	    if it does not have to overwrite the thing.
	    "make dist" is even more interesting beast..

2008-01-06  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* version 0.14

	* ttyreader.c, aprx.conf.in, aprx.8.in:
	    Support TNC2 monitor format on reception.

	* ttyreader.c, aprx.conf.in, aprx.8.in: