@@ -1,10 +1,11 @@
-2008-01-10  Matti Aarnio - OH2MQK - KP20NG  <mea@mea.h.zmailer.org>
+2008-01-10  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>
 
 	* aprx.c:
 	    Always close STDIN from reading, and replace it with
 	    a file handle opened on /dev/null.
 	    When daemoning, close also STDOUT and STDERR, and
 	    replace them with handles writing to /dev/null.
+	    .. and do it as late as possible.
 
 	* aprx.h, aprx.c, config.c, erlang.c, aprx.8.in, aprx.conf.in,
 	  aprx-stat.c:
